[gd_scene load_steps=3 format=3 uid="uid://cbfah0t4re54l"]

[ext_resource type="Script" path="res://scenes/menus/options/options.gd" id="1_qmlgl"]
[ext_resource type="AudioStream" uid="uid://17lo8ka8krt7" path="res://assets/sounds/MENUSONG_2_OMGOMGOMGYAAAAAY.mp3" id="2_ikbpu"]

[node name="Options" type="Node2D"]
script = ExtResource("1_qmlgl")

[node name="ChkFullScreen" type="CheckButton" parent="."]
anchors_preset = -1
anchor_left = -0.112
anchor_top = -2.2
anchor_right = -0.112
anchor_bottom = -2.2
offset_left = 218.0
offset_top = 122.0
offset_right = 262.0
offset_bottom = 146.0
text = "Fullscreen"

[node name="sliderMouseSensitivity" type="HSlider" parent="."]
offset_left = 226.0
offset_top = 153.0
offset_right = 426.0
offset_bottom = 169.0
min_value = 1.0
max_value = 5.0
value = 3.0
rounded = true

[node name="lblMouseSensitivity" type="RichTextLabel" parent="."]
offset_left = 77.0
offset_top = 147.0
offset_right = 220.0
offset_bottom = 187.0
text = "Mouse Sensitivity
"

[node name="sliderMasterVol" type="HSlider" parent="."]
offset_left = 732.0
offset_top = 125.0
offset_right = 932.0
offset_bottom = 141.0
min_value = -80.0
max_value = 6.0
step = 5.0
rounded = true

[node name="lblMasterVol" type="RichTextLabel" parent="."]
offset_left = 574.0
offset_top = 111.0
offset_right = 717.0
offset_bottom = 151.0
text = "Master Volume"

[node name="sliderSFXVol" type="HSlider" parent="."]
offset_left = 721.0
offset_top = 188.0
offset_right = 921.0
offset_bottom = 204.0
min_value = -80.0
max_value = 6.0
step = 5.0
value = 1.0
rounded = true

[node name="lblSFXVol" type="RichTextLabel" parent="."]
offset_left = 572.0
offset_top = 182.0
offset_right = 715.0
offset_bottom = 222.0
text = "SFX Volume"

[node name="sliderMusicVol" type="HSlider" parent="."]
offset_left = 723.0
offset_top = 153.0
offset_right = 923.0
offset_bottom = 169.0
min_value = -80.0
max_value = 6.0
step = 5.0
value = 1.0
rounded = true

[node name="lblMusicVol" type="RichTextLabel" parent="."]
offset_left = 574.0
offset_top = 147.0
offset_right = 717.0
offset_bottom = 187.0
text = "Music Volume"

[node name="lblMouseSenseAmount" type="RichTextLabel" parent="."]
offset_left = 435.0
offset_top = 146.0
offset_right = 485.0
offset_bottom = 182.0
bbcode_enabled = true
scroll_active = false
tab_size = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ikbpu")
autoplay = true
bus = &"Music"

[connection signal="toggled" from="ChkFullScreen" to="." method="_on_chk_full_screen_toggled"]
[connection signal="value_changed" from="sliderMouseSensitivity" to="." method="_on_slider_mouse_sensitivity_value_changed"]
[connection signal="value_changed" from="sliderMasterVol" to="." method="_on_slider_master_vol_value_changed"]
[connection signal="value_changed" from="sliderSFXVol" to="." method="_on_slider_sfx_vol_value_changed"]
[connection signal="value_changed" from="sliderMusicVol" to="." method="_on_slider_music_vol_value_changed"]
